@@ -1,7 +1,8 @@
-10/14/2014 Oleg Moskalenko <mom040267@gmail.com>
+10/16/2014 Oleg Moskalenko <mom040267@gmail.com>
 Version 4.2.1.4 'Monza':
 	- Code cleaning.
 	- TCP/TLS tests extended.
+	- relay RTCP sockets ports allocation fixed.
 	
 10/05/2014 Oleg Moskalenko <mom040267@gmail.com>
 Version 4.2.1.2 'Monza':
